ALF-1618) Асинхронная загрузка задач, поручений, бизнес-процессов в базовом документе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5193 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -356,3 +356,13 @@ div.yui-panel.form-container .form-fields {
 .document-components-panel .alfresco-twister-actions .refresh:active {
     opacity: 1;
 }
+
+.lecm-document-content-ajax-loading {
+    background-image: url(/share/res/images/lecm-documents/ajax-loader.gif);
+    background-repeat: no-repeat;
+    width: 99%;
+    height: 40px;
+    margin: 3px;
+    background-position-x: center;
+}
+
