ALF-1637: Дизайнбаг в табличном представлении в документе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5412 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -83,10 +83,12 @@
 
 .datagrid .onMoveTableRowUp a {
     background-image: url("/share/res/images/lecm-base/components/triangle_up.png");
+	background-position: 4px 4px;
 }
 
 .datagrid .onMoveTableRowDown a {
     background-image: url("/share/res/images/lecm-base/components/triangle_down.png");
+	background-position: 4px 4px;
 }
 
 .yui-skin-lecmTheme .datagrid .yui-dt tr.total-row,
