--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -555,6 +555,9 @@ h4 .lighter
     margin-bottom: 10px;
     float: left;
 }
+.yui-skin-lecmTheme div.form-field {
+	line-height: 25px;
+}
 .yui-skin-lecmTheme .yui-panel div.form-field label,
 .yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-label {
     width: 150px;
