ALF-1643: Изменить кнопку создания записи в табличном представлении
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5426 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2598,3 +2598,9 @@ span.person a div.description:empty {
     display: block;
 }
 /* Datagrid : table : fixed header - end */
+
+.datalist-toolbar .new-row span.first-child
+{
+	background: url(/share/res/components/images/add-row-16.png) no-repeat 12px 4px;
+	padding-left: 24px;
+}
