[fix] ALF-1624 Опечатка в заголовке столбца "Закрытых всего поручений за период (из них важных)" отчета "Исполнительская дисциплина по Исполнителям"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5433 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-executor/exec-discipline-by-executor.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-discipline-by-executor/exec-discipline-by-executor.jrxml
@@ -141,7 +141,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Закрыто всего поручений за период (их них важных)"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Закрыто всего поручений за период (из них важных)"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="1ede53b5-ccec-41e6-9dec-bff1bf22dd41" x="366" y="2" width="110" height="164" isPrintWhenDetailOverflows="true"/>
