[~]  доработки по подотчетам -изменения в меню + отдельный шаблон для подотчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5460 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -73,7 +73,8 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
     margin: 5px;
 }
 
-#bd #lecm-content-main div[id*="reports-editor-toolbar"], #bd #lecm-content-main div[id*="template-edit"], #bd #lecm-content-main div[id*="source-edit"]{
+#bd #lecm-content-main div[id*="reports-editor-toolbar"], #bd #lecm-content-main div[id*="template-edit"], #bd #lecm-content-main div[id*="source-edit"],
+#bd #lecm-content-main div[id*="report-settings"],#bd #lecm-content-main div[id*="report-subreports"]{
     margin:0;
 }
 
