Редактор форм - страница
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5481 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
+++ b/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
@@ -1,6 +1,12 @@
-.models td.yui-dt-last .yui-dt-liner a.delete
+.models .yui-dt-liner a.delete
 {
-   background-image: url(../images/delete-16.png);
+   background: transparent url(../images/delete-16.png) no-repeat scroll center center;
+   cursor: pointer;
+   padding-right: 15px;
+}
+.models .yui-dt-liner a.edit-form
+{
+   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
    cursor: pointer;
 }
 .models td.yui-dt-last .yui-dt-liner a
