Доработки по отчетам и подочтетами: чистка кода, приведение поставляемых отчетов к соответствию с форматом, вычисление выражений по одному пути, множественнное указание типов элементов в подотчета
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5567 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-stages/stages.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-stages/stages.jrxml
@@ -22,7 +22,7 @@
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="col_Number" class="java.lang.String"/>
+	<field name="col_Number" class="java.lang.Integer"/>
 	<field name="col_Title" class="java.lang.String"/>
 	<field name="col_Status" class="java.lang.String"/>
 	<field name="col_Sum" class="java.lang.String"/>
