5563: Добавил забытые стили.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5575 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
@@ -143,3 +143,18 @@
 .yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit .dnd-uploader ul.attachments-list li div {
     width: 220px;
 }
+
+/* Создание этапа договора: новое представление */
+.yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit table.presentation, /* Поле ввода комментария */
+.yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit table div.form-field input[type="text"],
+.yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit table .autocomplete-block .autocompleteCurrentValueDisplayInvisible {
+	width: 100%;
+}
+
+.yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit table div.form-field input.autocomplete-input[type="text"] {
+	width: 255px;
+}
+
+.yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit table td {
+	vertical-align: top;
+}
