ALF-1647: Теперь форма создания/редактирования этапов универсальная. Появились кнопки "В работу" и "Закрыть".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5600 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -15,6 +15,11 @@
     text-align: right;
     margin: 0;
 }
+
+.yui-skin-lecmTheme .yui-panel table div.form-field div.viewmode-field span.viewmode-label {
+    width: auto;
+}
+
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.viewmode-field span.viewmode-value {
     max-width: 200px;
     padding-left: 0;
