Редактор форм - контрол для выбора компонента - стили
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5606 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2604,3 +2604,12 @@ span.person a div.description:empty {
 	background: url(/share/res/components/images/add-row-16.png) no-repeat 12px 4px;
 	padding-left: 24px;
 }
+
+div.form-field input[type="text"].formFieldControlParams {
+	width: 100%;
+}
+
+div.form-field table.formFieldControlParamsTable {
+	padding-left: 160px;
+	width: 520px;
+}
