[~] Стили для грида в дашлете
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5617 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -366,3 +366,11 @@ div.yui-panel.form-container .form-fields {
     background-position-x: center;
 }
 
+.dashlet div.form-container .form-fields {
+    padding: 0;
+}
+
+.dashlet .datagrid .datagrid-bar {
+    margin: 0;
+}
+
