[~] Стили для грида в дашлете. Перенос в поле статус удален.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5618 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
@@ -13,3 +13,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.yui-skin-lecmTheme div.grid td.yui-dt-col-prop_lecm-contract-table-structure_stage-status,
+.yui-skin-lecmTheme div.grid td.yui-dt-col-prop_lecm-contract-table-structure_stage-status div {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
