--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
@@ -21,3 +21,11 @@
     text-overflow: ellipsis;
 }
 
+.yui-u .dashlet .dashlet-body .datagrid .grid.yui-dt .yui-dt-data td[status="Закрыт"] {
+    color: green;
+}
+
+.yui-u .dashlet .dashlet-body .datagrid .grid.yui-dt .yui-dt-data td[status="Не начат"] {
+    color: red;
+}
+
