доработки по интерфейсам Редактора Отчетов [~]в шаблон office пишем всегда текстовые значения, а не типизованные данные
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5643 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -116,3 +116,15 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
     background: url("../../images/lecm-dictionary/xml-file-16.png") no-repeat scroll 5px 5px transparent;
     cursor: pointer;
 }
+
+div[id*="report-settings"] div.form-field input[type="text"],
+div[id*="report-settings"] div.form-field select,
+div[id*="report-settings"] .yui-skin-lecmTheme .yui-panel div.form-field textarea {
+    min-height: 26px;
+    max-height: 100px;
+    width: 30em;
+    margin: 0;
+    border-width: 1px;
+    position: inherit;
+    font-size: 99%;
+}
